--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<!-- <runOrder>alphabetical</runOrder> -->
+					<reuseForks>false</reuseForks>
+					<forkCount>1</forkCount>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -45,13 +53,20 @@
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
-		<!--	-->  
+		<!-- -->
 		<dependency>
 			<groupId>com.zaxxer</groupId>
-		 	<artifactId>HikariCP</artifactId>
-			<version>2.7.4</version> 
+			<artifactId>HikariCP</artifactId>
+			<version>2.7.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
+
 		<!-- the JTA API -->
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
