--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<runOrder>random</runOrder> 
+					<runOrder>random</runOrder>
 					<reuseForks>false</reuseForks>
 					<forkCount>1</forkCount>
 				</configuration>
@@ -65,6 +65,11 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<!-- <dependency>
+			<groupId>com.atomikos</groupId>
+			<artifactId>simple-connection-pool</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency> -->
 
 
 		<!-- the JTA API -->
